addeded the second and third blog

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <body>
 
     <div>
+        <h1>
+            My First website
+        </h1>
         <h3>
-            my first website
+            my first blog
             <P>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, ex! Eligendi 
                 in nesciunt labore excepturi voluptatibus. Corporis nesciunt omnis voluptatibus, 
@@ -19,5 +22,26 @@
         </h3>
     </div>
     
+    <div>
+        <h3>
+            my second blog
+            <P>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, ex! Eligendi 
+                in nesciunt labore excepturi voluptatibus. Corporis nesciunt omnis voluptatibus, 
+                culpa distinctio nemo veniam sunt sapiente, quas, ullam laboriosam accusantium?
+            </P>
+        </h3>
+    </div>
+
+    <div>
+        <h3>
+            my third blog
+            <P>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, ex! Eligendi 
+                in nesciunt labore excepturi voluptatibus. Corporis nesciunt omnis voluptatibus, 
+                culpa distinctio nemo veniam sunt sapiente, quas, ullam laboriosam accusantium?
+            </P>
+        </h3>
+    </div>
 </body>
 </html>
