addeded the push instructuion

--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
                 in nesciunt labore excepturi voluptatibus. Corporis nesciunt omnis voluptatibus, 
                 culpa distinctio nemo veniam sunt sapiente, quas, ullam laboriosam accusantium?
             </P>
+        </h3> 
+    </div>
+
+    <div>
+        <h3> How to push incremental code in git hub
+            <ul>
+                <li> git add . </li>
+                <li> git commit -m "write a meaningful text to understand</li>
+                <li> git push</li>
+
+            </ul>
         </h3>
     </div>
 </body>
