addede the first picture

--- a/index.html
+++ b/index.html
@@ -54,5 +54,12 @@
             </ul>
         </h3>
     </div>
+
+    <div>
+        <h3>
+            adding my first ever picture in website
+        </h3>
+        <img src="pictures/pic.webp" width="200" height="300">
+    </div>
 </body>
 </html>
